2007-06-07  Brady Anderson <brady.anderson@gmail.com> 

	added callback for new media channel when only text exists

2007-07-08  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter.mdp, Banter/AudioView.cs, Banter/Makefile.am: Added AudioView
	  Class
	* Banter/VideoView.cs: Pimped out the Video view  NOT!
	* Banter/ChatWindow.cs: Updatec ChatView to handle events

2007-06-07  Brady Anderson <brady.anderson@gmail.com> 

	added message indication for video chat start and stop

2007-06-07  Brady Anderson <brady.anderson@gmail.com> 

	added debug message to see if removing media channel completes

2007-06-07  Brady Anderson <brady.anderson@gmail.com> 

	cleaned up dead code

2007-06-07  Brady Anderson <brady.anderson@gmail.com> 

	Added on all the events for stream changes

2007-06-07  Brady Anderson <brady.anderson@gmail.com> 

	added try catch around the channel close

2007-06-07  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/ConversationManager.cs: fixed the destroy method call
	* Banter/ChatWindow.cs: called to destroy conversations when we close
	  the video window
	* Banter/Conversation.cs: added a check for the video stream

2007-06-07  Brady Anderson <brady.anderson@gmail.com> 

	

2007-06-07  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/ChatWindow.cs: Added check so we dont' connect more than once
	  when window is shown

2007-06-07  Brady Anderson <brady.anderson@gmail.com> 

	call the Close method on all outstanding channels

2007-06-07  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/VideoView.cs: minor correction
	* Banter/ChatWindowManager.cs: Changed ShowAll to Present
	* Banter/ChatWindow.cs: Fixed the way the window was connecting up the
	  stream... well, when it did it

2007-06-07  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/Account.cs, Banter/ConversationManager.cs,
	  Banter/Conversation.cs, Banter/ChatWindow.cs: debug messages

2007-06-07  Calvin Gaisford <calvinrg@gmail.com> 
